<resources>
    <string name="app_name">WeatherApp</string>
    <string name="search">Search</string>
    <string name="city_name">City name</string>
    <string name="search_a_city">SEARCH A CITY</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="search_a_location">SEARCH A LOCATION</string>
    <string name="choose_a_city">CHOOSE A CITY</string>
    <string name="welcome">Welcome</string>
    <string name="c">C</string>
    <string name="f">F</string>
    <string name="details">DETAILS</string>
    <string name="min_temperature">Min temperature</string>
    <string name="max_temperature">Max temperature</string>
    <string name="cloud_coverage">Cloud coverage</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
</resources>