<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_weather">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/dimens_32"
            tools:context=".MainActivity">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimens_16"
                    android:layout_marginTop="@dimen/dimens_24"
                    android:text="@string/welcome"
                    android:textColor="@color/black"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/city_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_a_city"
                android:layout_marginStart="@dimen/dimens_16"
                android:layout_marginTop="@dimen/dimens_32"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/city_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens_8"
                android:background="@color/white"
                android:visibility="gone"
                tools:listitem="@layout/city_items"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@+id/city_txt"/>

            <TextView
                android:id="@+id/search_loc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_a_location"
                android:layout_marginStart="@dimen/dimens_16"
                android:layout_marginTop="@dimen/dimens_32"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/city_recyclerview" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/search_location_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/search_loc"
                android:layout_marginTop="@dimen/dimens_8">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/latitude_layout"
                    app:boxBackgroundMode="filled"
                    app:boxBackgroundColor="@color/white"
                    app:boxStrokeWidth="1dp"
                    app:boxStrokeWidthFocused="0dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/latitude"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/latitude_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:inputType="numberDecimal" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/longitude_layout"
                    app:boxBackgroundMode="filled"
                    app:boxBackgroundColor="@color/white"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/longitude"
                    app:layout_constraintTop_toBottomOf="@+id/latitude_layout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/longitude_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:inputType="numberDecimal" />
                </com.google.android.material.textfield.TextInputLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/search_city_loc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_a_city"
                android:layout_marginStart="@dimen/dimens_16"
                android:layout_marginTop="@dimen/dimens_32"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/search_location_layout" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/search_city_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/search_city_loc"
                android:layout_marginTop="@dimen/dimens_8">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/city_name_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/city_name"
                    app:boxBackgroundColor="@color/white"
                    app:boxBackgroundMode="filled"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/city_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/search"
                style="@style/MyTheme.Button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="@dimen/dimens_16"
                android:layout_marginEnd="@dimen/dimens_16"
                android:text="@string/search"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/search_city_layout" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>
